postgresql-13 (13~beta2-2) UNRELEASED; urgency=medium

  * Drop ldap-utils and slapd from build-dependencies while the "extra" ldap
    test isn't run.

 -- Christoph Berg <myon@debian.org>  Wed, 15 Jul 2020 15:49:42 +0200

postgresql-13 (13~beta2-1) experimental; urgency=medium

  * New beta release.

 -- Christoph Berg <myon@debian.org>  Wed, 24 Jun 2020 16:19:12 +0200

postgresql-13 (13~beta1-1) experimental; urgency=medium

  * New major upstream version 13; packaging based on postgresql-12.

 -- Christoph Berg <myon@debian.org>  Tue, 19 May 2020 15:22:03 +0200