@@ -2,6 +2,7 @@ postgresql-13 (13~beta2-2) UNRELEASED; urgency=medium
 
   * Drop ldap-utils and slapd from build-dependencies while the "extra" ldap
     test isn't run.
+  * Print backtrace from coredumps at build-time when tests crash.
 
  -- Christoph Berg <myon@debian.org>  Wed, 15 Jul 2020 15:49:42 +0200
 
